# Twitchy

./: .env.example  Cargo.toml  Config.toml  README.md
src/: command_registry.rs  config.rs  main.rs  twitch.rs
src/commands/: dice.rs  hello.rs  mod.rs
src/features/: auto_category.rs  mod.rs
src/helper/: ai_response.rs  fetch_user_emotes.rs  mod.rs  twitch_user_id.rs
