[package]
name = "twitchy"
version = "0.1.0"
edition = "2021"

[dependencies]
twitch-irc = "5.0"
tokio = { version = "1.47", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9.5"
reqwest = { version = "0.12.23", features = ["json"] }
anyhow = "1.0.99"
rand = "0.9.2"