[package]
name = "twitchy"
version = "0.1.0"
edition = "2021"

[dependencies]
twitch-irc = "5.0"
tokio = { version = "1.47", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9.5"
reqwest = { version = "0.12.23", features = ["json"] }
rand = "0.9.2"
windows = { version = "0.61.3", features = ["Win32", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_System", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_WindowsProgramming"] }
once_cell = "1.21.3"
ratatui = "0.29.0"
crossterm = "0.27.0"
